; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_active_later_.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_active_later_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event = type { i32 }

@th_base_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @event_active_later_(%struct.event* %0, i32 %1) #0 {
  %3 = alloca %struct.event*, align 8
  %4 = alloca i32, align 4
  store %struct.event* %0, %struct.event** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.event*, %struct.event** %3, align 8
  %6 = getelementptr inbounds %struct.event, %struct.event* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @th_base_lock, align 4
  %9 = call i32 @EVBASE_ACQUIRE_LOCK(i32 %7, i32 %8)
  %10 = load %struct.event*, %struct.event** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @event_active_later_nolock_(%struct.event* %10, i32 %11)
  %13 = load %struct.event*, %struct.event** %3, align 8
  %14 = getelementptr inbounds %struct.event, %struct.event* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @th_base_lock, align 4
  %17 = call i32 @EVBASE_RELEASE_LOCK(i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @EVBASE_ACQUIRE_LOCK(i32, i32) #1

declare dso_local i32 @event_active_later_nolock_(%struct.event*, i32) #1

declare dso_local i32 @EVBASE_RELEASE_LOCK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
